Completed my changes